--- a/index.html
+++ b/index.html
@@ -2,81 +2,174 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>jQuery Calculator</title>
+​
+    <!-- Added link to the jQuery Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+​
+    <!-- Added a link to Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+​
+    <!-- Added a link to our external stylesheet-->
+    <link rel="stylesheet" href="style.css">
+​
 </head>
 <body>
-   <h1>Sup Mate</h1>
-</body>
-    <script>
-    let wins = 0
-    let loses = 0
-    let ties = 0
-    let choices = ["r", "p", "s"]
+​
+<!-- Jumbotron for Title -->
+<div class="jumbotron">
+    <h1 class="text-center">jQuery Calculator</h1>
+    <h3 class="text-center">Perform basic mathematic operations using the power of jQuery!</h3>
+</div>
+​
+<div class="container">
+​
+    <div class="row">
+​
+      <!-- Calculator Card -->
+      <div class="col-lg-4">
+        <div class="card">
+          <h3 class="card-header">Calculator</h3>
+​
+          <div class="card-body">
+            <button id="button-1" class="btn btn-primary number" value="1"><span>1</span></button>
+            <button id="button-2" class="btn btn-primary number" value="2"><span>2</span></button>
+            <button id="button-3" class="btn btn-primary number" value="3"><span>3</span></button>
+            <button id="button-plus" class="btn btn-danger operator" value="plus"><span>+</span></button>
+            <br><br>
+            <button id="button-4" class="btn btn-primary number" value="4"><span>4</span></button>
+            <button id="button-5" class="btn btn-primary number" value="5"><span>5</span></button>
+            <button id="button-6" class="btn btn-primary number" value="6"><span>6</span></button>
+            <button id="button-minus" class="btn btn-danger operator" value="minus"><span>&minus;</span></button>
+            <br><br>
+            <button id="button-7" class="btn btn-primary number" value="7"><span>7</span></button>
+            <button id="button-8" class="btn btn-primary number" value="8"><span>8</span></button>
+            <button id="button-9" class="btn btn-primary number" value="9"><span>9</span></button>
+            <button id="button-multiply" class="btn btn-danger operator" value="times"><span>&times;</span></button>
+            <br><br>
+            <button id="button-0" class="btn btn-primary number" value="0"><span>0</span></button>
+            <button id="button-divide" class="btn btn-danger operator" value="divide"><span>&divide;</span></button>
+            <button id="button-power" class="btn btn-danger operator" value="power"><span>^</span></button>
+            <button id="button-equal" class="btn btn-success equal" value="equals"><span>=</span></button>
+            <br><br>
+            <button id="button-clear" class="btn btn-dark clear" value="clear"><span>clear</span></button>
+          </div>
+        </div>
+      </div>
+​
+      <!-- Result Card -->
+      <div class="col-lg-6">
+        <div class="card">
+          <h3 class="card-header">Result</h3>
+          <div class="card-body">
+            <h1 id="first-number"></h1>
+            <h1 id="operator"></h1>
+            <h1 id="second-number"></h1>
+            <hr>
+            <h1 id="result"></h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+​
+<script type="text/javascript">
 
+//global variables
+var firstNumber = ""
+var secondNumber = ""
+var operatorChoice
+let result = 0;
+isOperatorChosen = false;
+isCalculated = false;
 
-for(let i = 0; i < 10; i++){
-    let userChoice = prompt("r p s")
-    let computerChoice
-    computerChoice = choices[Math.floor(Math.random() * choices.length)]
-    
-        switch(userChoice) {
-            case "r":
-            if (computerChoice === "p"){
-                loses++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your loses = ${loses}`)
-            } else if(computerChoice === "s"){
-                wins++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your wins = ${wins}`)
-            } else {
-                ties++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your ties = ${ties}`)
-            }
-            break;
+//function to start calculator and clear out for new calculation
+function startCalc() {
+  firstNumber = "";
+  secondNumber = "";
+  operatorChoice = "";
+  isOperatorChosen = false;
+  isCalculated = false;
 
+  $("#first-number, #second-number, #operator, #result").empty()
+  };
+  
 
-            case "p":
-            if (computerChoice === "s"){
-                loses++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your loses = ${loses}`)
-            } else if(computerChoice === "r"){
-                wins++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your wins = ${wins}`)
-            } else {
-                ties++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your ties = ${ties}`)
-            }
-            break;
-
-
-            case "s":
-            if (computerChoice === "r"){
-                loses++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your loses = ${loses}`)
-            } else if(computerChoice === "p"){
-                wins++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your wins = ${wins}`)
-            } else {
-                ties++
-                alert(`computer chose ${computerChoice}`)
-                alert(`your ties = ${ties}`)
-            }
-            break;
-
-
+//when clicking numbers, do these functions
+$(".number").on("click", function () {
+  //determine if a calculation has been done
+    if (isCalculated) {
+      return false;
+    } 
+    //if operator is chosen, should pick secondnumber and put in second number value from selected
+    if (isOperatorChosen) {
+        secondNumber += $(this).val()
+        $("#second-number").text(secondNumber)
+      }
+      //otherwise, must pick first number and put in first number value from selected
+      else {
+      firstNumber += $(this).val()
+      $("#first-number").text(firstNumber)
+      }
+    });
+//function to determine functionality of buttons
+$(".operator").on("click", function () {
+    if (isOperatorChosen){
+        return false
+    }
+    else {
+        isOperatorChosen = true
+        operatorChoice = $(this).val()
+        $("#operator").text(operatorChoice)
+    }
+})
+$(".clear").on("click", function() {
+    startCalc()
+})
+//make buttons work, then piece by piece
+$(".equal").on("click", function () {
+    if (isOperatorChosen || !isCalculated){
+        firstNumber = parseInt(firstNumber)
+        secondNumber = parseInt(secondNumber)
+        switch(operatorChoice){
+            case "plus":
+            result = firstNumber + secondNumber
+            $("#result").text(result)
+            isCalculated = true
+            break
+            case "minus":
+            result = firstNumber - secondNumber
+            $("#result").text(result)
+            isCalculated = true
+            break
+            case "divide":
+            result = firstNumber / secondNumber
+            $("#result").text(result)
+            isCalculated = true
+            break
+            case "times":
+            result = firstNumber * secondNumber
+            $("#result").text(result)
+            isCalculated = true
+            break
+            case "power":
+            result = firstNumber ^ secondNumber
+            $("#result").text(result)
+            isCalculated = true
+            break
             default:
-            alert("you didnt pick a right letter")
-            i--
-            
+            console.log("lol u didnt pick an operatror")
+
         }
-}
-    </script>
+    }
+})
+
+//start Calc and clear out previous contents for new calc
+
+// Your code here...
+
+
+</script>
+​
+</body>
 </html>
